[package]
name = "visualfft"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
csv = "1.3.1"
eframe = { version = "0.33.3", features = ["default"]}
egui_plot = "0.34.0"
resvg = "0.45.1"
rustfft = "6.4.1"
serde = { version = "1.0.219", features = ["derive"] }
